--- a/index.html
+++ b/index.html
@@ -29,11 +29,47 @@
                     <span>Wastexpert</span>
                 </div>
                 <nav class="navmenu df just" id="nav">
-                    <a href="#aboutus">About us</a>
-                    <a href="#Services">Services</a>
-                    <a href="#Contactus">Contact us</a>
-                    <a href="#FAQ">FAQ</a>
-                    <button>Login</button>
+                    <ul class="navlinks">
+                        <li> <a href="#aboutus">About us</a></li>
+                        <li class="services"> <a href="">Services</a>
+                            <div class="sub-menu">
+                                <ul class="">
+                                    <li> <a href="">
+                                            Waste to wealth pick up
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="">
+                                            Waste to wealth Drop Point
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="">
+                                            Corporate recycling
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="">
+                                            Flip it
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="">
+                                            Recce
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="">
+                                            Post event cleaning
+                                        </a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </li>
+                        <li> <a href="#Contactus">Contact us</a></li>
+                        <li><a href="#FAQ">FAQ</a></li>
+                        <li><button>Login</button></li>
+                    </ul>
                 </nav>
                 <div class="icon" id="bar"><i class="fas fa-bars" id="icon"></i></div>
             </div>
@@ -69,20 +105,20 @@
                         <div class="carousel-inner">
                             <div class="carousel-item active">
                                 <div class="d-flex justify-content-between mt-4">
-                                    <img src="/images/AccessBankLogo.png" class="d-block sponsor" alt="accessBank">
-                                    <img src="/images/JaizBankLogo.png" class="d-block sponsor" alt="JaizBank">
-                                    <img src="/images/ubaLogo.png" class="d-block sponsor" alt="UBABank">
-                                    <img src="/images/ogunState.png" class="d-block sponsor" alt="OgunStae">
+                                    <img src="/images/AccessBankLogo.png" class="d-block newpoint" alt="accessBank">
+                                    <img src="/images/JaizBankLogo.png" class="d-block newpoint" alt="JaizBank">
+                                    <img src="/images/ubaLogo.png" class="d-block newpoint" alt="UBABank">
+                                    <img src="/images/ogunState.png" class="d-block newpoint" alt="OgunStae">
                                 </div>
                             </div>
 
                             <div class="carousel-item">
                                 <div class="d-flex justify-content-between mt-4">
-                                    <img src="/images/BritshAmericanTobacoLogo.png" class="d-block sponsor"
+                                    <img src="/images/BritshAmericanTobacoLogo.png" class="d-block  newpoint"
                                         alt="BATLogo">
-                                    <img src="/images/CocaColaLogo.png" class="d-block sponsor" alt="CocaColaLogo">
-                                    <img src="/images/nestleLogo.png" class="d-block sponsor" alt="nestleLogo">
-                                    <img src="/images/NigerianBreweries Logo.png" class="d-block sponsor"
+                                    <img src="/images/CocaColaLogo.png" class="d-block newpoint" alt="CocaColaLogo">
+                                    <img src="/images/nestleLogo.png" class="d-block  newpoint" alt="nestleLogo">
+                                    <img src="/images/NigerianBreweries Logo.png" class="d-block newpoint"
                                         alt="NigerianBreweries">
                                 </div>
                             </div>
@@ -98,10 +134,10 @@
     <section class="section3">
         <div class="container">
             <div class="row">
-                <div class="col-md-6">
+                <div class="col-md-6 d-flex justify-content-center align-items-center">
                     <img class="pic img-fluid" src="/images/aboutUsImg.png" alt="">
                 </div>
-                <div class="col-md-6">
+                <div class="col-md-6 mains">
                     <div class="d-flex align-items-center path">
                         <h3 id="aboutus">About us</h3>
                         <span><img src="/images/GreenStraightLine.png" alt=""></span>
@@ -162,7 +198,7 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-lg-9">
+                    <div class="col-lg-9 preType">
                         <h6>Kolade babalola ( Uber Driver) </h6>
                         <p><i>“tincidunt urna non, lobortis tincidunt. Faucibus felis nulla faucibus tellus nunc. Platea
                                 risus
@@ -183,7 +219,7 @@
                     <div class="col-lg-3">
                         <img class="img" src="/images/firstName.png" alt="">
                     </div>
-                    <div class="col-lg-9">
+                    <div class="col-lg-9 preType">
                         <h6>Kunle Johnson( restaurant Owner) </h6>
                         <p><i>“Wastexpert is a life saver for me. It has taken the hassle and burdens of trashing my
                                 waste
@@ -205,25 +241,25 @@
                 </div>
                 <div class="col-lg-3">
                     <div class="cont">
-                        <img src="/images/canWaste.png" alt="">
+                        <img src="/images/canWaste.png" class="img-fluid" alt="">
                         <p>Aluminium Can Containers</p>
                     </div>
                 </div>
                 <div class="col-lg-3">
                     <div class="cont">
-                        <img src="/images/paperWaste.png" alt="">
+                        <img src="/images/paperWaste.png" class="img-fluid" alt="">
                         <p>Discarded/ New Cartons</p>
                     </div>
                 </div>
                 <div class="col-lg-3">
                     <div class="cont">
-                        <img src="/images/glassWasteBottle.png" alt="">
+                        <img src="/images/glassWasteBottle.png" class="img-fluid" alt="">
                         <p>Glass Containers </p>
                     </div>
                 </div>
                 <div class="col-lg-3">
                     <div class="cont">
-                        <img src="/images/plasticWasteBottle.png" alt="">
+                        <img src="/images/plasticWasteBottle.png" class="img-fluid" alt="">
                         <p>Pet botles</p>
                     </div>
                 </div>
@@ -239,7 +275,7 @@
     <section class="section7">
         <div class="container">
             <div class="row">
-                <div class="col-lg-12 d-flex align-items-center justify-content-center">
+                <div class="col-lg-12">
                     <h3 id="FAQ">Frequently asked questions</h3>
                     <h4>FAQ</h4>
                 </div>
@@ -247,7 +283,7 @@
                     <div class="accordion" id="accordionExample">
                         <div class="accordion-item">
                             <h2 class="accordion-header" id="headingOne">
-                                <button class="accordion-button" type="button" data-bs-toggle="collapse"
+                                <button class="accordion-button myways" type="button" data-bs-toggle="collapse"
                                     data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
                                     How much does it cost to be a wastexert agent?
                                 </button>
@@ -263,8 +299,9 @@
                         </div>
                         <div class="accordion-item">
                             <h2 class="accordion-header" id="headingTwo">
-                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                                    data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                                <button class="accordion-button mywayss collapsed" type="button"
+                                    data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false"
+                                    aria-controls="collapseTwo">
                                     What is the payment plan of wastexpert like?
                                 </button>
                             </h2>
@@ -282,7 +319,7 @@
                         </div>
                         <div class="accordion-item">
                             <h2 class="accordion-header" id="headingThree">
-                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                <button class="accordion-button myway collapsed" type="button" data-bs-toggle="collapse"
                                     data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
                                     As a new wastexpert Agent/ collector, will i be trained on how to
                                     transacts on wastexpert?
@@ -302,12 +339,13 @@
                         </div>
                         <div class="accordion-item">
                             <h2 class="accordion-header" id="headingFour">
-                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                                    data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
+                                <button class="accordion-button weneed collapsed" type="button"
+                                    data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="false"
+                                    aria-controls="collapseFour">
                                     What is the size of space i need?
                                 </button>
                             </h2>
-                            <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingFour"
+                            <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour"
                                 data-bs-parent="#accordionExample">
                                 <div class="accordion-body">
                                     <strong>This is the third item's accordion body.</strong> It is hidden by default,
@@ -321,12 +359,13 @@
                         </div>
                         <div class="accordion-item">
                             <h2 class="accordion-header" id="headingFive">
-                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                                    data-bs-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
+                                <button class="accordion-button lastway collapsed" type="button"
+                                    data-bs-toggle="collapse" data-bs-target="#collapseFive" aria-expanded="false"
+                                    aria-controls="collapseFive">
                                     Can anyone work as agent or collector, Also, can i operate from anywhere in Nigeria?
                                 </button>
                             </h2>
-                            <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingFive"
+                            <div id="collapse" class="accordion-collapse collapse" aria-labelledby="headingFive"
                                 data-bs-parent="#accordionExample">
                                 <div class="accordion-body">
                                     <strong>This is the third item's accordion body.</strong> It is hidden by default,
@@ -356,7 +395,7 @@
     </section>
 
     <footer>
-        <div class="container">
+        <div class="container desktopFoot">
             <div class="row">
                 <div class="col-lg-6 logo">
                     <img src="/images/Logo.png" alt="">
@@ -365,7 +404,7 @@
                 <div class="col-lg-6 formF">
                     <form action="submit">
                         <label for="">Subscribe to our Newsletter</label><br>
-                        <input type="e-mail" placeholder="Enter your email address here">
+                        <input type="e-mail" placeholder="Enter your email address">
                         <span><button>Sign up</button></span>
                     </form>
                 </div>
@@ -377,21 +416,21 @@
                         for household items offered through our Wastexpert store.</p>
                 </div>
                 <div class="col-lg-3 footItems footmenu">
-                    <h6>About</h6>
+                    <h5>About</h5>
                     <p>Our Mission</p>
                     <p>vision</p>
                     <p>Solutions</p>
                     <p>Teams</p>
                 </div>
                 <div class="col-lg-3 footItems footmenu">
-                    <h6>Contact Us</h6>
+                    <h5>Contact Us</h5>
                     <p>Our Mission</p>
                     <p>vision</p>
                     <p>Solutions</p>
                     <p>Teams</p>
                 </div>
                 <div class="col-lg-3 footItems">
-                    <h6>Services</h6>
+                    <h5>Services</h5>
                     <p>Waste to wealth pick up</p>
                     <p>Flip it</p>
                     <p>Waste drop point</p>
@@ -401,16 +440,59 @@
             <hr>
             <div class="row">
                 <div class="col-lg-6">
-                    <p>Copyright © 2020, Created by Wastexpert Team</p>
+                    <p class="lastP">Copyright © 2020, Created by Wastexpert Team</p>
                 </div>
                 <div class="col-lg-6 medias">
-                    <img src="/images/twitterr.png" alt="">
+                    <span>
+                        <img src="/images/twitterr.png" alt="">
+                        <img src="/images/facebookk.png" alt="">
+                        <img src="/images/instagramm.png" alt="">
+                        <img src="/images/linkedinn.png" alt="">
+                        <img src="/images/mail.png" alt="">
+                    </span>
+                </div>
+            </div>
+        </div>
+
+        <div class="container Mobilefooter">
+            <div class="row">
+                <div class="col-lg-12 logo">
+                    <span>
+                        <img src="/images/Logo.png" alt="logo">
+                        Wastexpert
+                    </span>
+                </div>
+                <div class="col-lg-12">
+                    <p>Wastexpert is a waste recycling and social benefit venture borne out of sheer passion and vision
+                        to transform our environment into a zero landfill and zero waste nation. We operates an
+                        incentive-based scheme which collects recyclable materials from post consumers and in turn
+                        rewards them with “Points” which they can accumulate overtime and cash out or use to redeem/shop
+                        for household items offered through our Wastexpert store.</p>
+                </div>
+                <div class="col-lg-12">
+                    <form action="submit">
+                        <label for="">Subscribe to our Newsletter</label><br>
+                        <input type="e-mail" placeholder="Enter your email address">
+                        <span><button>Sign up</button></span>
+                    </form>
+            </div>
+            <div class="lists">
+                <p>About</p>
+                <p>Contact Us</p>
+                <p>Services</p>
+                <p>FAQ</p>
+            </div>
+            <div class="col-lg-12">
+                <span class="d-flex justify-content-center">
                     <img src="/images/facebookk.png" alt="">
+                    <img src="/images/twitterr.png" alt="">
                     <img src="/images/instagramm.png" alt="">
                     <img src="/images/linkedinn.png" alt="">
                     <img src="/images/mail.png" alt="">
-                </div>
+                </span>
             </div>
+            <hr>
+            <span class="col-lg-12 d-flex justify-content-center lastPP">Copyright © 2020, Created by Wastexpert Team</span>
         </div>
 
     </footer>
