--- a/index.html
+++ b/index.html
@@ -158,10 +158,12 @@
                         <img src="/Asset/img/footerLogo.svg" class="img-fluid" alt="">
                     </div>
                     <div class=" enter col-md-6 pt-5 ">
-                        <form action="" class="d-flex">
+                        <form action="">
                             <label for="e-mail">Subscribe to our Newsletter</label>  <br>
-                            <input type="email" name="" placeholder="Enter your email address here" id=""> <button
-                                type="submit"> <a href=""></a> Sign Up</button>
+                            <span class="d-flex">
+                                <input type="email" name="" placeholder="Enter your email address here" id=""> <button
+                                    type="submit"> Sign Up</button>
+                            </span>
                             </form>
                         </div>
                     </div>
@@ -169,14 +171,14 @@
             </div>
             <div class="container">
             <div class="row ft pt-5">
-                <div class="col-md-5 text-align-center ftext ">
+                <div class="col-md-4 text-align-center ftext ">
                     <p>Wastexpert is a waste recycling and social benefit venture borne out of sheer passion and vision
                         to transform our environment into a zero landfill and zero waste nation. We operates an
                         incentive-based scheme which collects recyclable materials from post consumers and in turn
                         rewards them with “Points” which they can accumulate overtime and cash out or use to redeem/shop
                         for household items offered through our Wastexpert store.</p>
                 </div>
-                <div class="col-md-2 px-3 abt">
+                <div class="col-md-2 px-3 abt text-center justify-content-center d-flex">
                     <ul>
                         <li> <a href="">About</a></li> <br>
                         <li class="dn"> <a href="">Our Mission</a></li>
@@ -186,7 +188,7 @@
                     </ul>
 
                 </div>
-                <div class="col-md-2 contact">
+                <div class="col-md-3 contact text-center justify-content-center d-flex">
                     <ul>
                         <li> <a href="">Contact Us</a></li><br>
                         <li class="dn"> <a href="">Our Mission</a></li>
@@ -195,7 +197,7 @@
                         <li class="dn"><a href="">Teams</a></li>
                     </ul>
                 </div>
-                <div class="col-md-3 services">
+                <div class="col-md-3 services text-center justify-content-center d-flex">
                     <ul>
                         <li> <a href=""> Service </a> </li> <br>
                         <li class="dn"> <a href=""> Waste to wealth pick up</a></li>
@@ -209,7 +211,6 @@
         <hr>
         <div class="container Copyright">
             <div>
-
                 Copyright © 2020, Created by Wastexpert Team
             </div>
 <div>
@@ -221,201 +222,12 @@
     <img src="/Asset/img/mail.svg" alt="">
 </div>
 
-            <!-- <i class="fa fa-facebook-official"></i>
-            <i class="fa fa-twitter-square"></i>
-            <i class="fa fa-instagram" ></i>
-            <i class="fa fa-linkedin-square"></i> -->
-            <!-- <i class="fa fa-etsy" aria-hidden="true"></i> -->
-            <!-- <i class= "fa fa-bars"></i> -->
+        
         </div>
     </footer>
 
 
-    <!-- <nav id="navbar">
-            <div class="wasteX">
-                <img src="/Asset/img/LogoWX.svg" alt=""> <span>Wastexpert</span>
-            </div>
-
-            <ul class="navBar" id="nav">
-
-                <li> <a class="nav-link" href="#">About</a></li>
-                <li> <a class="nav-link" href="#">Services</a></li>
-                <li> <a class="nav-link" href="#">Contact us</a></li>
-                <li> <a class="nav-link" href="#">FAQ</a></li>
-                <!-- <li> <a class="nav-link" href="#">Services</a></li> -->
-    <!-- <button type="button" class="btn " id="btn2" data-bs-toggle="modal" data-bs-target="#exampleModal">
-                    Login
-                </button>
-            </ul>
-            <button type="button" class="btn btn1" data-bs-toggle="modal" data-bs-target="#exampleModal">
-                Login
-            </button>
-            <div class="fa fa-bars" id="hamburger"></div>
-            <!-- <i id="ba" class="fa fa-bars"  width="200px" ></i> -->
-    <!-- </nav> -->
-    <!-- <section class="aboutUs">
-        <div class="container">
-            <div class="col pt-4">
-                <h2>About us</h2>
-                <p class="pb-4">Wastexpert is a waste recycling and social benefit venture borne out of sheer passion
-                    and
-                    vision to transform our environment into a zero landfill and zero waste nation. We operates
-                    an incentive-based scheme which collects recyclable materials from enerprie and households
-                    by giving them a chance to generate value from their waste and provide a reliable supply of
-                    raw material to the local recycling industry. And in turn rewards them with “Points” which
-                    they can accumulate overtime and cash out or use to redeem/shop for household items offered
-                    through our Wastexpert- store.</p>
-            </div>
-        </div>
-    </section>
-    <section class="wasteMenace">
-        <div class="container">
-            <div class="row ">
-                <div class="col-md pt-3 ">
-                    <img src="/Asset/img/about-us-wasteArea.svg" class="img-fluid" alt="">
-                </div>
-
-                <div class="col-md wasteText">
-                    <h2 class="pt-5">Waste Menace</h2>
-                    <p class="pt-4">It is a common sight to see our streets, drainages, roadsides and even dumpsites
-                        packed with
-                        recyclable packaging materials which are carelessly disposed of by users. This practice often
-                        poses
-                        environmental hazards to communities as they experience flood due to the blockage of water
-                        drainages
-                        by most of these recyclables which has become the fastest growing packaging option in the
-                        beverage
-                        and food industry. Lagos State (our pilot location) has an estimated population of 17 million
-                        people
-                        and daily generates an average of 9,000 metric tonnes of waste of which 1,200 metric tonnes are
-                        currently recycled. Recyclables form the bulk of identifiable items at refuse points in Nigeria.
-                        Often times, the drainage channels in the metropolis cities are blocked by these recyclable
-                        items
-                        and the resultant effect during the rainy season is flood and breeding ground for harmful
-                        organisms.
-                    </p>
-                </div>
-            </div>
-        </div>
-    </section>
-    <section class="OurSolution pt-4">
-        <div class="container">
-            <div class="row ">
-                <div class="col-md solutionText">
-                    <h2 class="pt-5">Our Solution</h2>
-                    <p class="pt-4">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mollis leo auctor a
-                        scelerisque vel sit cras eu consectetur. Viverra venenatis, mauris diam dolor cras a. Lectus
-                        massa aenean neque pulvinar tortor, a. Nisl, dictumst eu urna, at odio scelerisque pulvinar a,
-                        magna. Vulputate. sit amet, consectetur adipiscing elit. Mollis leo auctor a scelerisque vel sit
-                        cras eu consectetur. Viverra venenatis, mauris diam dolor cras a. Lectus massa aenean neque
-                        pulvinar tortor, a. Nisl, dictumst eu urna, at odio scelerisque pulvinar a, magna. Vulputate.
-                        consectetur adipiscing elit. Mollis leo auctor a scelerisque vel sit cras eu consectetur.
-                        Viverra venenatis, mauris diam dolor cras a. Lectus massa aenean neque pulvinar tortor, a. Nisl,
-                        dictumst eu urna, at odio scelerisque pulvinar a, magna.
-                    </p>
-                </div>
-                <div class="col-md pt-3 align-items-center">
-                    <img src="/Asset/img/About-Uswaste1.svg" class="img-fluid" alt="">
-                </div>
-            </div>
-        </div>
-    </section>
-    <section class="wasteRecycle">
-        <div class="container">
-            <div class="row ">
-                <div class="col-md pt-3 ">
-                    <img src="/Asset/img/AboutusBottleRCY.svg" class="img-fluid" alt="">
-                </div>
-
-                <div class="col-md RecycleText">
-                    <!-- <h2 class="pt-5">Waste Menace</h2> -->
-    <!-- <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mollis leo auctor a
-                        scelerisque vel sit cras eu consectetur. Viverra venenatis, mauris diam dolor cras a. Lectus
-                        massa aenean neque pulvinar tortor, a. Nisl, dictumst eu urna, at odio scelerisque pulvinar a,
-                        magna. Vulputate. sit amet, consectetur adipiscing elit. Mollis leo auctor a scelerisque vel sit
-                        cras eu consectetur. Viverra venenatis, mauris diam dolor cras a. Lectus massa aenean neque
-                        pulvinar tortor, a. Nisl, dictumst eu urna, at odio scelerisque pulvinar a, magna. Vulputate.
-                        consectetur adipiscing elit. Mollis leo auctor a scelerisque vel sit cras eu consectetur.
-                        Viverra venenatis, mauris diam dolor cras a. Lectus massa aenean neque pulvinar tortor, a. Nisl,
-                        dictumst eu urna,
-                    </p>
-                </div>
-            </div>
-        </div>
-    </section>
-    <section class="advice">
-        <div class="container">
-            <div class="row justify-content-center">
-                <div class="col-md-2 pt-5 md-d-none">
-                    <img src="/Asset/img/aboutUSrecycle-bin.svg" class="img-fluid" alt="">
-                </div>
-                <div class="col-md-8 adviceText">
-                    <h4> If you care about the environment and how it will affect mankind,
-                        then recycling shoudn’t take a second thought.</h4>
-
-                    <p> <b>Jeffery Sanderson</b>
-                    </p>
-                </div>
-                <div class="col-md-2 pt-5">
-                    <img src="/Asset/img/aboutUSecology.svg" class="img-fluid" alt="">
-                </div>
-            </div>
-        </div>
-    </section>
-    <footer>
-        <div class="container">
-            <div class="newsletter">
-                <div class="pt-5">
-                    <img src="/Asset/img/footerLogo.svg" class="img-fluid" alt="">
-                </div>
-                <div class="pt-5">
-                    <form action="">
-                        <label for="e-mail">Subscribe to our Newsletter</label> <br>
-                        <input type="email" name="" placeholder="Enter your email address here" id=""> <button
-                            type="submit">Sign Up</button>
-                    </form>
-                </div>
-            </div>
-            <div class="row ft pt-5">
-                <div class="col-md-3">
-                    <p>Wastexpert is a waste recycling and social benefit venture borne out of sheer passion and vision
-                        to transform our environment into a zero landfill and zero waste nation. We operates an
-                        incentive-based scheme which collects recyclable materials from post consumers and in turn
-                        rewards them with “Points” which they can accumulate overtime and cash out or use to redeem/shop
-                        for household items offered through our Wastexpert store.</p>
-                </div>
-                <div class="col-md-3 abt">
-                    <ul>
-                        <li> <a href="">About</a></li> <br>
-                        <li> <a href="">Our Mission</a></li>
-                        <li><a href="">Vision</a></li>
-                        <li><a href="">Solutions</a></li>
-                        <li><a href="">Teams</a></li>
-                    </ul>
-
-                </div>
-                <div class="col-md-3 contact">
-                    <ul>
-                        <li> <a href="">Contact Us</a></li><br>
-                        <li> <a href="">Our Mission</a></li>
-                        <li> <a href="">Vision</a></li>
-                        <li> <a href="">Solutions</a></li>
-                        <li><a href="">Teams</a></li>
-                    </ul>
-                </div>
-                <div class="col-md-3 services">
-                    <ul>
-                        <li> <a href=""> Service </a> </li> <br>
-                        <li> <a href=""> Waste to wealth pick up</a></li>
-                        <li> <a href=""> Flip-it</a></li>
-                        <li> <a href=""> Waste drop point</a></li>
-                        <li> <a href=""> Corporate Recycling</a></li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-    </footer> -->
-
+ 
     <script src="main.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
