--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Wastexpert</title>
-    <link rel="stylesheet" href="/css/bootstrap.rtl.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="/SASS/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -219,7 +220,7 @@
                     <div class="col-lg-3">
                         <img class="img" src="/images/firstName.png" alt="">
                     </div>
-                    <div class="col-lg-9 preType">
+                    <div class="col-lg-9 preType prtypecont">
                         <h6>Kunle Johnson( restaurant Owner) </h6>
                         <p><i>“Wastexpert is a life saver for me. It has taken the hassle and burdens of trashing my
                                 waste
@@ -276,7 +277,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <h3 id="FAQ">Frequently asked questions</h3>
+                    <h3 id="FAQ" class="text-align-center justify-content-center d-flex">Frequently asked questions</h3>
                     <h4>FAQ</h4>
                 </div>
                 <div class="col-lg-12">
@@ -383,7 +384,7 @@
                 <div class="col-lg-12">
                     <h3 class=" d-flex align-items-center justify-content-center asking">Still have a question?</h3>
                     <p class=" d-flex align-items-center justify-content-center"> If you cannot find answer to your
-                        question in our FAQ,
+                        question in our FAQ,</br>
                         you can always Contact us.
                         we will get back to you shortly!
                     <div class="ContUs d-flex align-items-center justify-content-center">
@@ -401,8 +402,8 @@
                     <img src="/images/Logo.png" alt="">
                     <span>Wastexpert</span>
                 </div>
-                <div class="col-lg-6 formF">
-                    <form action="submit">
+                <div class="col-lg-6 formFF">
+                    <form action="submit" >
                         <label for="">Subscribe to our Newsletter</label><br>
                         <input type="e-mail" placeholder="Enter your email address">
                         <span><button>Sign up</button></span>
@@ -472,34 +473,39 @@
                 <div class="col-lg-12">
                     <form action="submit">
                         <label for="">Subscribe to our Newsletter</label><br>
-                        <input type="e-mail" placeholder="Enter your email address">
-                        <span><button>Sign up</button></span>
+                        <div>
+                            <input type="e-mail" placeholder="Enter your email address">
+                            <span><button>Sign up</button></span>
+                        </div>
                     </form>
+                </div>
+                <div class="lists">
+                    <p>About</p>
+                    <p>Contact Us</p>
+                    <p>Services</p>
+                    <p>FAQ</p>
+                </div>
+                <div class="col-lg-12">
+                    <span class="d-flex justify-content-center">
+                        <img src="/images/facebookk.png" alt="">
+                        <img src="/images/twitterr.png" alt="">
+                        <img src="/images/instagramm.png" alt="">
+                        <img src="/images/linkedinn.png" alt="">
+                        <img src="/images/mail.png" alt="">
+                    </span>
+                </div>
+                <hr>
+                <span class="col-lg-12 d-flex justify-content-center lastPP">Copyright © 2020, Created by Wastexpert
+                    Team</span>
             </div>
-            <div class="lists">
-                <p>About</p>
-                <p>Contact Us</p>
-                <p>Services</p>
-                <p>FAQ</p>
-            </div>
-            <div class="col-lg-12">
-                <span class="d-flex justify-content-center">
-                    <img src="/images/facebookk.png" alt="">
-                    <img src="/images/twitterr.png" alt="">
-                    <img src="/images/instagramm.png" alt="">
-                    <img src="/images/linkedinn.png" alt="">
-                    <img src="/images/mail.png" alt="">
-                </span>
-            </div>
-            <hr>
-            <span class="col-lg-12 d-flex justify-content-center lastPP">Copyright © 2020, Created by Wastexpert Team</span>
-        </div>
 
     </footer>
 
 
 
-    <script src="/js/bootstrap.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
     <script src="main.js"></script>
 </body>
 
