--- a/index.html
+++ b/index.html
@@ -180,7 +180,8 @@
                 </div>
                 <div class="col-md-2 px-3 abt text-center justify-content-center d-flex">
                     <ul>
-                        <li> <a href="">About</a></li> <br>
+                        <li class="sn"> <a href="">About</a></li> <br>
+                        <li  class="dn"> <a href="">About</a></li> <br>
                         <li class="dn"> <a href="">Our Mission</a></li>
                         <li class="dn"><a href="">Vision</a></li>
                         <li class="dn"><a href="">Solutions</a></li>
@@ -190,16 +191,18 @@
                 </div>
                 <div class="col-md-3 contact text-center justify-content-center d-flex">
                     <ul>
-                        <li> <a href="">Contact Us</a></li><br>
+                        <li class="sn"> <a href="">Contact Us</a></li><br>
+                        <li  class="dn"> <a href="">Contact Us</a></li><br>
                         <li class="dn"> <a href="">Our Mission</a></li>
                         <li class="dn"> <a href="">Vision</a></li>
                         <li class="dn"> <a href="">Solutions</a></li>
                         <li class="dn"><a href="">Teams</a></li>
                     </ul>
                 </div>
-                <div class="col-md-3 services text-center justify-content-center d-flex">
+                <div class="col-md-3 services text-center justify-content-center d-flex ">
                     <ul>
-                        <li> <a href=""> Service </a> </li> <br>
+                        <li class="sn"> <a href=""> Service </a> </li> <br>
+                        <li  class="dn"> <a href=""> Service </a> </li> <br>
                         <li class="dn"> <a href=""> Waste to wealth pick up</a></li>
                         <li class="dn"> <a href=""> Flip-it</a></li>
                         <li class="dn"> <a href=""> Waste drop point</a></li>
@@ -208,21 +211,26 @@
                 </div>
             </div>
         </div>
+        <div class="text-center justify-content-center d-md-none">
+            <img src="/Asset/img/fb.svg" alt="">
+            <img src="/Asset/img/instagram.svg" alt="">
+            <img src="/Asset/img/twitter.svg" alt="">
+            <img src="/Asset/img/linkedin.svg" alt="">
+            <img src="/Asset/img/mail.svg" alt="">
+        </div>
+        
         <hr>
         <div class="container Copyright">
-            <div>
+            <div class="cpy">
                 Copyright © 2020, Created by Wastexpert Team
             </div>
-<div>
-
+<div class="d-none d-md-block">
     <img src="/Asset/img/fb.svg" alt="">
     <img src="/Asset/img/instagram.svg" alt="">
     <img src="/Asset/img/twitter.svg" alt="">
     <img src="/Asset/img/linkedin.svg" alt="">
     <img src="/Asset/img/mail.svg" alt="">
-</div>
-
-        
+</div>     
         </div>
     </footer>
 
