--- a/index2.html
+++ b/index2.html
@@ -281,7 +281,90 @@
             </div>
 
         </section>
+ <!-------------------Footer----------------------->
+ <footer>
+    <div class="newsletter">
+    <div class="container">
+            <div class="row">
+                <div class="col-md-6 pt-5">
+                    <img src="/Asset/img/footerLogo.svg" class="img-fluid" alt="">
+                </div>
+                <div class=" enter col-md-6 pt-5 ">
+                    <form action="">
+                        <label for="e-mail">Subscribe to our Newsletter</label>  <br>
+                        <span class="d-flex">
+                            <input type="email" name="" placeholder="Enter your email address here" id=""> <button
+                                type="submit"> Sign Up</button>
+                        </span>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="container">
+        <div class="row ft pt-5">
+            <div class="col-md-4 text-align-center ftext ">
+                <p>Wastexpert is a waste recycling and social benefit venture borne out of sheer passion and vision
+                    to transform our environment into a zero landfill and zero waste nation. We operates an
+                    incentive-based scheme which collects recyclable materials from post consumers and in turn
+                    rewards them with “Points” which they can accumulate overtime and cash out or use to redeem/shop
+                    for household items offered through our Wastexpert store.</p>
+            </div>
+            <div class="col-md-2 px-3 abt text-center justify-content-center d-flex">
+                <ul>
+                    <li class="sn"> <a href="">About</a></li> <br>
+                    <li  class="dn"> <a href="">About</a></li> <br>
+                    <li class="dn"> <a href="">Our Mission</a></li>
+                    <li class="dn"><a href="">Vision</a></li>
+                    <li class="dn"><a href="">Solutions</a></li>
+                    <li class="dn"><a href="">Teams</a></li>
+                </ul>
 
+            </div>
+            <div class="col-md-3 contact text-center justify-content-center d-flex">
+                <ul>
+                    <li class="sn"> <a href="">Contact Us</a></li><br>
+                    <li  class="dn"> <a href="">Contact Us</a></li><br>
+                    <li class="dn"> <a href="">Our Mission</a></li>
+                    <li class="dn"> <a href="">Vision</a></li>
+                    <li class="dn"> <a href="">Solutions</a></li>
+                    <li class="dn"><a href="">Teams</a></li>
+                </ul>
+            </div>
+            <div class="col-md-3 services text-center justify-content-center d-flex ">
+                <ul>
+                    <li class="sn"> <a href=""> Service </a> </li> <br>
+                    <li  class="dn"> <a href=""> Service </a> </li> <br>
+                    <li class="dn"> <a href=""> Waste to wealth pick up</a></li>
+                    <li class="dn"> <a href=""> Flip-it</a></li>
+                    <li class="dn"> <a href=""> Waste drop point</a></li>
+                    <li class="dn"> <a href=""> Corporate Recycling</a></li>
+                </ul>
+            </div>
+        </div>
+    </div>
+    <div class="text-center justify-content-center d-md-none">
+        <img src="/Asset/img/fb.svg" alt="">
+        <img src="/Asset/img/instagram.svg" alt="">
+        <img src="/Asset/img/twitter.svg" alt="">
+        <img src="/Asset/img/linkedin.svg" alt="">
+        <img src="/Asset/img/mail.svg" alt="">
+    </div>
+    
+    <hr>
+    <div class="container Copyright">
+        <div class="cpy">
+            Copyright © 2020, Created by Wastexpert Team
+        </div>
+<div class="d-none d-md-block">
+<img src="/Asset/img/fb.svg" alt="">
+<img src="/Asset/img/instagram.svg" alt="">
+<img src="/Asset/img/twitter.svg" alt="">
+<img src="/Asset/img/linkedin.svg" alt="">
+<img src="/Asset/img/mail.svg" alt="">
+</div>     
+    </div>
+</footer>
 
 
 
