--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-6 pt-5">
-                    <h2>About us <span></span></h2>
+                    <h2>About us <span><img src="/Asset/img/underline.svg" alt=""></span></h2>
                     <p class="justify-content-center">Wastexpert is a waste recycling and social benefit venture
                         borne out of sheer passion and vision
                         to transform our environment into a zero landfill and zero waste nation. We operates an
@@ -76,7 +76,7 @@
                     </p>
                 </div>
                 <div class="col-md-6 pt-5 text-align-center justify-content-center d-flex">
-                    <img src="/Asset/img/AboutUSvolunteer.svg" class="img-fluid" alt="">
+                   <img src="/Asset/img/waste.svg" class="img-fluid" alt="">
                 </div>
             </div>
         </div>
@@ -90,7 +90,7 @@
                     <img src="/Asset/img/about-us-wasteArea.svg" class="img-fluid" alt="">
                 </div>
                 <div class="col-md-6 pt-5">
-                    <h2>Waste Menace</h2>
+                    <h2>Waste Menace <span><img src="/Asset/img/underline.svg" alt=""></span></h2>
                     <p class="justify-content-center">It is a common sight to see our streets, drainages, roadsides and
                         even dumpsites packed with recyclable packaging materials which are carelessly disposed of by
                         users. This practice often poses environmental hazards to communities as they experience flood
@@ -111,7 +111,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-6 pt-5">
-                    <h2>Our Solution</h2>
+                    <h2>Our Solution  <span><img src="/Asset/img/underline.svg" alt=""></span></h2>
                     <p class="justify-content-center">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mollis
                         leo auctor a scelerisque vel sit cras eu consectetur. Viverra venenatis, mauris diam dolor cras
                         a. Lectus massa aenean neque pulvinar tortor, a. Nisl, dictumst eu urna, at odio scelerisque
