table for locations

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                     </p>
                 </div>
                 <div class="col-md-6 pt-5 text-align-center justify-content-center d-flex">
-                   <img src="/Asset/img/waste.svg" class="img-fluid" alt="">
+                   <img src="/Asset/img/volunteerr.svg" class="img-fluid" alt="">
                 </div>
             </div>
         </div>
@@ -123,7 +123,7 @@
                         tortor, a. Nisl, dictumst eu urna, at odio scelerisque pulvinar a, magna.
                     </p>
                 </div>
-                <div class="col-md-6 pt-5 text-align-center justify-content-center d-flex">
+                <div class="col-md-6 pt-5 text-align-center justify-content-center d-flex imgs">
                     <img src="/Asset/img/wastebinAbtUS.svg" class="img-fluid" alt="">
                 </div>
             </div>
