--- a/index2.html
+++ b/index2.html
@@ -72,7 +72,7 @@
                                 </p>
                             </div>
                             <div class="col-md-6 col-sm-6 pt-5 d-flex align-items-center justify-content-center">
-                                <img src="/Asset/img/bottleTreasure.svg" class="img-fluid" class="d-block w-100" alt="">
+                                <img src="/Asset/img/baskettrash.svg" class="img-fluid" class="d-block w-100" alt="">
                             </div>
                         </div>
                     </div>
